Create service section.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,38 @@
       </section>
     </header>
     <!--  End of Header Section -->
-  
+
+    <!-- Start of Services Section-->
+    <section>
+      <img src="/images/icon-access-anywhere.svg" alt="" />
+      <h3>Access your files, anywhere</h3>
+      <p>
+        The ability to use a smartphone, tablet, or computer to access your
+        account means your files follow you everywhere.
+      </p>
+
+      <img src="/images/icon-security.svg" alt="" />
+      <h3>Security you can trust</h3>
+      <p>
+        2-factor authentication and user-controlled encryption are just a couple
+        of the security features we allow to help secure your files.
+      </p>
+
+      <img src="/images/icon-collaboration.svg" alt="" />
+      <h3>Real-time collaboration</h3>
+      <p>
+        Securely share files and folders with friends, family and colleagues for
+        live collaboration. No email attachments required.
+      </p>
+
+      <img src="/images/icon-any-file.svg" alt="" />
+      <h3>Store any type of file</h3>
+      <p>
+        Whether you're sharing holidays photos or work documents, Fylo has you
+        covered allowing for all file types to be securely stored and shared.
+      </p>
+    </section>
+    <!-- End of Services Section-->
 
     <!--   
 
@@ -95,7 +126,5 @@
   Contact Us
   Terms
   Privacy -->
-
-
   </body>
 </html>
