Create testimonial section..

--- a/index.html
+++ b/index.html
@@ -90,36 +90,62 @@
         live collaboration. No email attachments required.
       </p>
       <a href="#">
+        <img src="/images/icon-arrow.svg" alt="" />
         See how Fylo works
       </a>
     </section>
     <!-- End of Info Section-->
 
-    <!--   
+    <!-- Start of Testimonial Section-->
+    <section>
+      <img src="/images/bg-quotes.png" alt="" />
+      <div>
+        <p>
+          Fylo has improved our team productivity by an order of magnitude.
+          Since making the switch our team has become a well-oiled collaboration
+          machine.
+        </p>
+        <img src="/images/profile-1.jpg" alt="" />
+        <p>
+          Satish Patel
+        </p>
+        <p>
+          Founder & CEO, Huddle
+        </p>
+      </div>
+      <div>
+        <p>
+          Fylo has improved our team productivity by an order of magnitude.
+          Since making the switch our team has become a well-oiled collaboration
+          machine.
+        </p>
+        <img src="/images/profile-2.jpg" alt="" />
+        <p>
+          Bruce McKenzie
+        </p>
+        <p>
+          Founder & CEO, Huddle
+        </p>
+      </div>
+      <div>
+        <p>
+          Fylo has improved our team productivity by an order of magnitude.
+          Since making the switch our team has become a well-oiled collaboration
+          machine.
+        </p>
+        <img src="/images/profile-3.jpg" alt="" />
+        <p>
+          Iva Boyd
+        </p>
+        <p>
+          Founder & CEO, Huddle
+        </p>
+      </div>
+    </section>
+    <!-- End of Testimonial Section-->
 
+    <!--     
 
- 
-
-  
-
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Satish Patel
-  Founder & CEO, Huddle
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Bruce McKenzie
-  Founder & CEO, Huddle
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Iva Boyd
-  Founder & CEO, Huddle
 
   Get early access today
 
