--- a/index.html
+++ b/index.html
@@ -144,15 +144,26 @@
     </section>
     <!-- End of Testimonial Section-->
 
+    <!-- Start of Subscription Section-->
+    <section>
+      <h2>
+        Get early access today
+      </h2>
+      <p>
+        It only takes a minute to sign up and our free starter tier is extremely
+        generous. If you have any questions, our support team would be happy to
+        help you.
+      </p>
+      <input type="email" />
+      <a href="#">
+        Get Started For Free
+      </a>
+    </section>
+    <!-- End of Subscription Section-->
+
     <!--     
 
 
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
-  questions, our support team would be happy to help you.
-
-  Get Started For Free
 
   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
   dolore magna aliqua
