--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
     <link rel="stylesheet" href="css/style.css" />
-
     <title>Fylo landing page</title>
   </head>
+  
   <body>
     <!--  Start of Header Section -->
     <header>
@@ -161,23 +162,71 @@
     </section>
     <!-- End of Subscription Section-->
 
-    <!--     
+    <!-- Start of Footer Section-->
+    <footer>
+      <div class="footer-section">
+        <img src="/images/logo.svg" alt="logo" />
+        <div>
+          <img src="/images/icon-location.svg" alt="location" />
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua
+          </p>
+        </div>
+      </div>
 
+      <div class="footer-section">
+        <div class="flex">
+          <img src="/images/icon-phone.svg" alt="phone" />
+          <p>
+            +1-543-123-4567
+          </p>
+        </div>
 
+        <div class="flex">
+          <img src="/images/icon-email.svg" alt="email" />
+          <p>
+            example@fylo.com
+          </p>
+        </div>
+      </div>
 
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-  dolore magna aliqua
+      <div class="footer-section">
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">Blog</a></li>
+        </ul>        
+      </div>
 
-  +1-543-123-4567
-  example@fylo.com
+      <div class="footer-section">
+        <ul>
+          <li><a href="#">Contact Us</a></li>
+          <li><a href="#">Terms</a></li>
+          <li><a href="#">Privacy</a></li>
+        </ul>
+      </div>
+    </footer>
 
-  About Us
-  Jobs
-  Press
-  Blog
+    <div class="footer-section">
+      <ul>
+        <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+      </ul>
+    </div>
+    <!-- End of Footer Section-->
 
-  Contact Us
-  Terms
-  Privacy -->
+        
+
+  
+  
+  
+  
+
+  
+  
+  
   </body>
 </html>
