--- a/index.html
+++ b/index.html
@@ -14,219 +14,228 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <title>Fylo landing page</title>
   </head>
-  
+
   <body>
     <!--  Start of Header Section -->
     <header>
-      <nav>
-        <img src="images/logo.svg" alt="" class="logo" />
-        <ul>
-          <li><a href=""></a>Features</li>
-          <li><a href=""></a>Team</li>
-          <li><a href=""></a>Sign In</li>
-        </ul>
-      </nav>
+      <div class="container">
+        <nav>
+          <img src="images/logo.svg" alt="" class="logo" />
+          <ul>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Team</a></li>
+            <li><a href="#">Sign In</a></li>
+          </ul>
+        </nav>
 
-      <section>
-        <img src="images/illustration-intro.png" alt="" />
-        <h1>All your files in one secure location, accessible anywhere.</h1>
+          <img src="images/illustration-intro.png" alt="" />
+          <h1>All your files in one secure location, accessible anywhere.</h1>
+          <p>
+            Fylo stores all your most important files in one secure location.
+            Access them wherever you need, share and collaborate with friends
+            family, and co-workers.
+          </p>
+          <a href="#" class="start-button">Get Started</a>
+      </div>
+      </header>
+      <!--  End of Header Section -->
+
+      <!-- Start of Services Section-->
+      <section class="container">
+        <div class="services">
+        <img src="/images/icon-access-anywhere.svg" alt="" />
+        <h3>Access your files, anywhere</h3>
         <p>
-          Fylo stores all your most important files in one secure location.
-          Access them wherever you need, share and collaborate with friends
-          family, and co-workers.
+          The ability to use a smartphone, tablet, or computer to access your
+          account means your files follow you everywhere.
         </p>
-        <a href="#" class="start-button">Get Started</a>
+
+        <img src="/images/icon-security.svg" alt="" />
+        <h3>Security you can trust</h3>
+        <p>
+          2-factor authentication and user-controlled encryption are just a
+          couple of the security features we allow to help secure your files.
+        </p>
+
+        <img src="/images/icon-collaboration.svg" alt="" />
+        <h3>Real-time collaboration</h3>
+        <p>
+          Securely share files and folders with friends, family and colleagues
+          for live collaboration. No email attachments required.
+        </p>
+
+        <img src="/images/icon-any-file.svg" alt="" />
+        <h3>Store any type of file</h3>
+        <p>
+          Whether you're sharing holidays photos or work documents, Fylo has you
+          covered allowing for all file types to be securely stored and shared.
+        </p>
+      </div>
       </section>
-    </header>
-    <!--  End of Header Section -->
+      <!-- End of Services Section-->
 
-    <!-- Start of Services Section-->
-    <section>
-      <img src="/images/icon-access-anywhere.svg" alt="" />
-      <h3>Access your files, anywhere</h3>
-      <p>
-        The ability to use a smartphone, tablet, or computer to access your
-        account means your files follow you everywhere.
-      </p>
+      <!-- Start of Info Section-->
+      <section class="container">
+        <div class="Information">
+        <img src="/images/illustration-stay-productive.png" alt="" />
+        <h2>
+          Stay productive, wherever you are
+        </h2>
+        <p>
+          Never let location be an issue when accessing your files. Fylo has you
+          covered for all of your file storage needs.
+        </p>
+        <p>
+          Securely share files and folders with friends, family and colleagues
+          for live collaboration. No email attachments required.
+        </p>
+        <a href="#">
+          See how Fylo works
+          <img src="/images/icon-arrow.svg" alt="" />
+        </a>
+      </section>
+      <!-- End of Info Section-->
 
-      <img src="/images/icon-security.svg" alt="" />
-      <h3>Security you can trust</h3>
-      <p>
-        2-factor authentication and user-controlled encryption are just a couple
-        of the security features we allow to help secure your files.
-      </p>
-
-      <img src="/images/icon-collaboration.svg" alt="" />
-      <h3>Real-time collaboration</h3>
-      <p>
-        Securely share files and folders with friends, family and colleagues for
-        live collaboration. No email attachments required.
-      </p>
-
-      <img src="/images/icon-any-file.svg" alt="" />
-      <h3>Store any type of file</h3>
-      <p>
-        Whether you're sharing holidays photos or work documents, Fylo has you
-        covered allowing for all file types to be securely stored and shared.
-      </p>
-    </section>
-    <!-- End of Services Section-->
-
-    <!-- Start of Info Section-->
-    <section>
-      <img src="/images/illustration-stay-productive.png" alt="" />
-      <h2>
-        Stay productive, wherever you are
-      </h2>
-      <p>
-        Never let location be an issue when accessing your files. Fylo has you
-        covered for all of your file storage needs.
-      </p>
-      <p>
-        Securely share files and folders with friends, family and colleagues for
-        live collaboration. No email attachments required.
-      </p>
-      <a href="#">
-        See how Fylo works
-        <img src="/images/icon-arrow.svg" alt="" />
-      </a>
-    </section>
-    <!-- End of Info Section-->
-
-    <!-- Start of Testimonial Section-->
-    <section>
-      <img src="/images/bg-quotes.png" alt="" />
-      <div>
-        <p>
-          Fylo has improved our team productivity by an order of magnitude.
-          Since making the switch our team has become a well-oiled collaboration
-          machine.
-        </p>
-        <img src="/images/profile-1.jpg" alt="" />
-        <p>
-          Satish Patel
-        </p>
-        <p>
-          Founder & CEO, Huddle
-        </p>
-      </div>
-      <div>
-        <p>
-          Fylo has improved our team productivity by an order of magnitude.
-          Since making the switch our team has become a well-oiled collaboration
-          machine.
-        </p>
-        <img src="/images/profile-2.jpg" alt="" />
-        <p>
-          Bruce McKenzie
-        </p>
-        <p>
-          Founder & CEO, Huddle
-        </p>
-      </div>
-      <div>
-        <p>
-          Fylo has improved our team productivity by an order of magnitude.
-          Since making the switch our team has become a well-oiled collaboration
-          machine.
-        </p>
-        <img src="/images/profile-3.jpg" alt="" />
-        <p>
-          Iva Boyd
-        </p>
-        <p>
-          Founder & CEO, Huddle
-        </p>
-      </div>
-    </section>
-    <!-- End of Testimonial Section-->
-
-    <!-- Start of Subscription Section-->
-    <section>
-      <h2>
-        Get early access today
-      </h2>
-      <p>
-        It only takes a minute to sign up and our free starter tier is extremely
-        generous. If you have any questions, our support team would be happy to
-        help you.
-      </p>
-      <input type="email" />
-      <a href="#">
-        Get Started For Free
-      </a>
-    </section>
-    <!-- End of Subscription Section-->
-
-    <!-- Start of Footer Section-->
-    <footer>
-      <div class="footer-section">
-        <img src="/images/logo.svg" alt="logo" />
+      <!-- Start of Testimonial Section-->
+      <section class="container">
         <div>
-          <img src="/images/icon-location.svg" alt="location" />
+        <img src="/images/bg-quotes.png" alt="" />
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua
+            Fylo has improved our team productivity by an order of magnitude.
+            Since making the switch our team has become a well-oiled
+            collaboration machine.
+          </p>
+          <img src="/images/profile-1.jpg" alt="" />
+          <p>
+            Satish Patel
+          </p>
+          <p>
+            Founder & CEO, Huddle
+          </p>
+        </div>
+        <div>
+          <p>
+            Fylo has improved our team productivity by an order of magnitude.
+            Since making the switch our team has become a well-oiled
+            collaboration machine.
+          </p>
+          <img src="/images/profile-2.jpg" alt="" />
+          <p>
+            Bruce McKenzie
+          </p>
+          <p>
+            Founder & CEO, Huddle
+          </p>
+        </div>
+        <div>
+          <p>
+            Fylo has improved our team productivity by an order of magnitude.
+            Since making the switch our team has become a well-oiled
+            collaboration machine.
+          </p>
+          <img src="/images/profile-3.jpg" alt="" />
+          <p>
+            Iva Boyd
+          </p>
+          <p>
+            Founder & CEO, Huddle
           </p>
         </div>
       </div>
+      </section>
+      <!-- End of Testimonial Section-->
 
-      <div class="footer-section">
-        <div class="flex">
-          <img src="/images/icon-phone.svg" alt="phone" />
-          <p>
-            +1-543-123-4567
-          </p>
+      <!-- Start of Subscription Section-->
+      <form class="container">
+        <h2>
+          Get early access today
+        </h2>
+        <p>
+          It only takes a minute to sign up and our free starter tier is
+          extremely generous. If you have any questions, our support team would
+          be happy to help you.
+        </p>
+        <div class="form-control">
+          <input type="email" placeholder="email@email.com" />
+          <a href="#">
+            Get Started For Free
+          </a>
+        </div>
+      </form>
+
+      <!-- End of Subscription Section-->
+
+      <!-- Start of Footer Section-->
+      <footer>
+        <div class="container">
+        <div class="footer-section">
+          <img src="/images/logo.svg" alt="logo" />
+          <div>
+            <img src="/images/icon-location.svg" alt="location" />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua
+            </p>
+          </div>
         </div>
 
-        <div class="flex">
-          <img src="/images/icon-email.svg" alt="email" />
-          <p>
-            example@fylo.com
-          </p>
+        <div class="footer-section">
+          <div class="flex">
+            <img src="/images/icon-phone.svg" alt="phone" />
+            <p>
+              +1-543-123-4567
+            </p>
+          </div>
+
+          <div class="flex">
+            <img src="/images/icon-email.svg" alt="email" />
+            <p>
+              example@fylo.com
+            </p>
+          </div>
+        </div>
+
+        <div class="footer-section">
+          <ul>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Jobs</a></li>
+            <li><a href="#">Press</a></li>
+            <li><a href="#">Blog</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-section">
+          <ul>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Privacy</a></li>
+          </ul>
         </div>
       </div>
+      </footer>
 
       <div class="footer-section">
         <ul>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Jobs</a></li>
-          <li><a href="#">Press</a></li>
-          <li><a href="#">Blog</a></li>
-        </ul>        
-      </div>
-
-      <div class="footer-section">
-        <ul>
-          <li><a href="#">Contact Us</a></li>
-          <li><a href="#">Terms</a></li>
-          <li><a href="#">Privacy</a></li>
+          <li>
+            <a href="#"><i class="fab fa-facebook"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+          </li>
         </ul>
       </div>
-    </footer>
-
-    <div class="footer-section">
-      <ul>
-        <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-      </ul>
-    </div>
+    
+    <!-- container -->
     <!-- End of Footer Section-->
-
-        
-
-  
-  
-  
-  
-
-  
-  
-  
   </body>
 </html>
