Adjust navigation and clean up.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </ul>
         </nav>
 
-          <img src="images/illustration-intro.png" alt="" />
+          <img src="images/illustration-intro.png" alt="illustration" />
           <h1>All your files in one secure location, accessible anywhere.</h1>
           <p>
             Fylo stores all your most important files in one secure location.
