--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           </ul>
         </nav>
 
+      <div class="cta">
           <img src="images/illustration-intro.png" alt="illustration" />
           <h1>All your files in one secure location, accessible anywhere.</h1>
           <p>
@@ -44,6 +45,7 @@
           </p>
           <a href="#" class="start-button">Get Started</a>
       </div>
+    </div>
       </header>
       <!--  End of Header Section -->
 
