--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         </nav>
 
       <div class="cta">
-          <img src="images/illustration-intro.png" alt="illustration" />
-          <h1>All your files in one secure location, accessible anywhere.</h1>
-          <p>
+          <img src="images/illustration-intro.png" alt="illustration" class="illustration-image"/>
+          <h1 class="illustration-title">All your files in one secure location, accessible anywhere.</h1>
+          <p class="illustration-body">
             Fylo stores all your most important files in one secure location.
             Access them wherever you need, share and collaborate with friends
             family, and co-workers.
@@ -52,30 +52,30 @@
       <!-- Start of Services Section-->
       <section class="container">
         <div class="services">
-        <img src="/images/icon-access-anywhere.svg" alt="" />
-        <h3>Access your files, anywhere</h3>
-        <p>
+        <img src="/images/icon-access-anywhere.svg" alt="" class="services-images"/>
+        <h3 class="services-title">Access your files, anywhere</h3>
+        <p class="services-body">
           The ability to use a smartphone, tablet, or computer to access your
           account means your files follow you everywhere.
         </p>
 
-        <img src="/images/icon-security.svg" alt="" />
-        <h3>Security you can trust</h3>
-        <p>
+        <img src="/images/icon-security.svg" alt="" class="services-images"/>
+        <h3 class="services-title">Security you can trust</h3>
+        <p class="services-body">
           2-factor authentication and user-controlled encryption are just a
           couple of the security features we allow to help secure your files.
         </p>
 
-        <img src="/images/icon-collaboration.svg" alt="" />
-        <h3>Real-time collaboration</h3>
-        <p>
+        <img src="/images/icon-collaboration.svg" alt="" class="services-images"/>
+        <h3 class="services-title">Real-time collaboration</h3>
+        <p class="services-body">
           Securely share files and folders with friends, family and colleagues
           for live collaboration. No email attachments required.
         </p>
 
-        <img src="/images/icon-any-file.svg" alt="" />
-        <h3>Store any type of file</h3>
-        <p>
+        <img src="/images/icon-any-file.svg" alt="" class="services-images"/>
+        <h3 class="services-title">Store any type of file</h3>
+        <p class="services-body">
           Whether you're sharing holidays photos or work documents, Fylo has you
           covered allowing for all file types to be securely stored and shared.
         </p>
@@ -85,20 +85,20 @@
 
       <!-- Start of Info Section-->
       <section class="container">
-        <div class="Information">
-        <img src="/images/illustration-stay-productive.png" alt="" />
-        <h2>
+        <div class="information">
+        <img src="/images/illustration-stay-productive.png" alt="" class="information-images"/>
+        <h2 class="information-title">
           Stay productive, wherever you are
         </h2>
-        <p>
+        <p class="information-body">
           Never let location be an issue when accessing your files. Fylo has you
           covered for all of your file storage needs.
         </p>
-        <p>
+        <p class="information-body">
           Securely share files and folders with friends, family and colleagues
           for live collaboration. No email attachments required.
         </p>
-        <a href="#">
+        <a href="#" class="fylo-works">
           See how Fylo works
           <img src="/images/icon-arrow.svg" alt="" />
         </a>
@@ -107,46 +107,46 @@
 
       <!-- Start of Testimonial Section-->
       <section class="container">
-        <div>
-        <img src="/images/bg-quotes.png" alt="" />
-          <p>
+        <div class="testimonial">
+        <img src="/images/bg-quotes.png" alt="" class="testimonial-images"/>
+          <p class="testimonial-body">
             Fylo has improved our team productivity by an order of magnitude.
             Since making the switch our team has become a well-oiled
             collaboration machine.
           </p>
-          <img src="/images/profile-1.jpg" alt="" />
-          <p>
+          <img src="/images/profile-1.jpg" alt="" class="testimonial-images"/>
+          <p class="testimonial-name">
             Satish Patel
           </p>
-          <p>
+          <p class="testimonial-position">
             Founder & CEO, Huddle
           </p>
         </div>
         <div>
-          <p>
+          <p class="testimonial-body">
             Fylo has improved our team productivity by an order of magnitude.
             Since making the switch our team has become a well-oiled
             collaboration machine.
           </p>
-          <img src="/images/profile-2.jpg" alt="" />
-          <p>
+          <img src="/images/profile-2.jpg" alt="" class="testimonial-images"/>
+          <p class="testimonial-person">
             Bruce McKenzie
           </p>
-          <p>
+          <p class="testimonial-position">
             Founder & CEO, Huddle
           </p>
         </div>
         <div>
-          <p>
+          <p class="testimonial-body">
             Fylo has improved our team productivity by an order of magnitude.
             Since making the switch our team has become a well-oiled
             collaboration machine.
           </p>
-          <img src="/images/profile-3.jpg" alt="" />
-          <p>
+          <img src="/images/profile-3.jpg" alt="" class="testimonial-images"/>
+          <p class="testimonial-name">
             Iva Boyd
           </p>
-          <p>
+          <p class="testimonial-position">
             Founder & CEO, Huddle
           </p>
         </div>
@@ -156,10 +156,10 @@
 
       <!-- Start of Subscription Section-->
       <form class="container">
-        <h2>
+        <h2 class="form-title">
           Get early access today
         </h2>
-        <p>
+        <p class="form-body">
           It only takes a minute to sign up and our free starter tier is
           extremely generous. If you have any questions, our support team would
           be happy to help you.
@@ -178,10 +178,10 @@
       <footer>
         <div class="container">
         <div class="footer-section">
-          <img src="/images/logo.svg" alt="logo" />
+          <img src="/images/logo.svg" alt="logo" class="logo"/>
           <div>
-            <img src="/images/icon-location.svg" alt="location" />
-            <p>
+            <img src="/images/icon-location.svg" alt="location" class="location-image"/>
+            <p class="footer-body">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua
             </p>
@@ -190,14 +190,14 @@
 
         <div class="footer-section">
           <div class="flex">
-            <img src="/images/icon-phone.svg" alt="phone" />
+            <img src="/images/icon-phone.svg" alt="phone" class="footer-phone-logo" />
             <p>
               +1-543-123-4567
             </p>
           </div>
 
           <div class="flex">
-            <img src="/images/icon-email.svg" alt="email" />
+            <img src="/images/icon-email.svg" alt="email" class="footer-email-logo"/>
             <p>
               example@fylo.com
             </p>
