Add get start button.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             Access them wherever you need, share and collaborate with friends
             family, and co-workers.
           </p>
-          <a href="#" class="start-button">Get Started</a>
+          <a href="#" class="start-btn btn-accent">Get Started</a>
       </div>
     </div>
       </header>
