--- a/index.html
+++ b/index.html
@@ -51,36 +51,46 @@
 
       <!-- Start of Services Section-->
       <section class="container">
-        <div class="services">
-        <img src="/images/icon-access-anywhere.svg" alt="" class="services-images"/>
-        <h3 class="services-title">Access your files, anywhere</h3>
-        <p class="services-body">
+        <div class="service-row">
+        <div class="service">
+        <img src="/images/icon-access-anywhere.svg" alt="" class="service-images"/>
+        <h3 class="service-title">Access your files, anywhere</h3>
+        <p class="service-body">
           The ability to use a smartphone, tablet, or computer to access your
           account means your files follow you everywhere.
         </p>
+      </div>  
 
-        <img src="/images/icon-security.svg" alt="" class="services-images"/>
-        <h3 class="services-title">Security you can trust</h3>
-        <p class="services-body">
+      <div class="service">
+        <img src="/images/icon-security.svg" alt="" class="service-images"/>
+        <h3 class="service-title">Security you can trust</h3>
+        <p class="service-body">
           2-factor authentication and user-controlled encryption are just a
           couple of the security features we allow to help secure your files.
         </p>
+      </div>
+    </div>
 
-        <img src="/images/icon-collaboration.svg" alt="" class="services-images"/>
-        <h3 class="services-title">Real-time collaboration</h3>
-        <p class="services-body">
+    <div class="service-row">
+      <div class="service">
+        <img src="/images/icon-collaboration.svg" alt="" class="service-images"/>
+        <h3 class="service-title">Real-time collaboration</h3>
+        <p class="service-body">
           Securely share files and folders with friends, family and colleagues
           for live collaboration. No email attachments required.
         </p>
+      </div>
 
-        <img src="/images/icon-any-file.svg" alt="" class="services-images"/>
-        <h3 class="services-title">Store any type of file</h3>
-        <p class="services-body">
+      <div class="service">
+        <img src="/images/icon-any-file.svg" alt="" class="service-images"/>
+        <h3 class="service-title">Store any type of file</h3>
+        <p class="service-body">
           Whether you're sharing holidays photos or work documents, Fylo has you
           covered allowing for all file types to be securely stored and shared.
         </p>
       </div>
-      </section>
+    </div>
+    </section>
       <!-- End of Services Section-->
 
       <!-- Start of Info Section-->
