Inforamtion Section centering.

--- a/index.html
+++ b/index.html
@@ -95,8 +95,9 @@
 
       <!-- Start of Info Section-->
       <section class="container">
-        <div class="information">
+        <div class="information-row">
         <img src="/images/illustration-stay-productive.png" alt="" class="information-images"/>
+      <div class="information-section">
         <h2 class="information-title">
           Stay productive, wherever you are
         </h2>
@@ -110,8 +111,10 @@
         </p>
         <a href="#" class="fylo-works">
           See how Fylo works
-          <img src="/images/icon-arrow.svg" alt="" />
+          <img src="/images/icon-arrow.svg" alt="" class="information-arrow" />
         </a>
+      </div>
+      </div>        
       </section>
       <!-- End of Info Section-->
 
