--- a/index.html
+++ b/index.html
@@ -35,99 +35,123 @@
           </ul>
         </nav>
 
-      <div class="cta">
-          <img src="images/illustration-intro.png" alt="illustration" class="illustration-image"/>
-          <h1 class="illustration-title">All your files in one secure location, accessible anywhere.</h1>
+        <div class="cta">
+          <img
+            src="images/illustration-intro.png"
+            alt="illustration"
+            class="illustration-image"
+          />
+          <h1 class="illustration-title">
+            All your files in one secure location, accessible anywhere.
+          </h1>
           <p class="illustration-body">
             Fylo stores all your most important files in one secure location.
             Access them wherever you need, share and collaborate with friends
             family, and co-workers.
           </p>
           <a href="#" class="start-btn btn-accent">Get Started</a>
+        </div>
       </div>
-    </div>
-      </header>
-      <!--  End of Header Section -->
+    </header>
+    <!--  End of Header Section -->
 
-      <!-- Start of Services Section-->
-      <section class="container">
-        <div class="service-row">
+    <!-- Start of Services Section-->
+    <section class="container">
+      <div class="service-row">
         <div class="service">
-        <img src="/images/icon-access-anywhere.svg" alt="" class="service-images"/>
-        <h3 class="service-title">Access your files, anywhere</h3>
-        <p class="service-body">
-          The ability to use a smartphone, tablet, or computer to access your
-          account means your files follow you everywhere.
-        </p>
-      </div>  
+          <img
+            src="/images/icon-access-anywhere.svg"
+            alt=""
+            class="service-images"
+          />
+          <h3 class="service-title">Access your files, anywhere</h3>
+          <p class="service-body">
+            The ability to use a smartphone, tablet, or computer to access your
+            account means your files follow you everywhere.
+          </p>
+        </div>
 
-      <div class="service">
-        <img src="/images/icon-security.svg" alt="" class="service-images"/>
-        <h3 class="service-title">Security you can trust</h3>
-        <p class="service-body">
-          2-factor authentication and user-controlled encryption are just a
-          couple of the security features we allow to help secure your files.
-        </p>
-      </div>
-    </div>
-
-    <div class="service-row">
-      <div class="service">
-        <img src="/images/icon-collaboration.svg" alt="" class="service-images"/>
-        <h3 class="service-title">Real-time collaboration</h3>
-        <p class="service-body">
-          Securely share files and folders with friends, family and colleagues
-          for live collaboration. No email attachments required.
-        </p>
+        <div class="service">
+          <img src="/images/icon-security.svg" alt="" class="service-images" />
+          <h3 class="service-title">Security you can trust</h3>
+          <p class="service-body">
+            2-factor authentication and user-controlled encryption are just a
+            couple of the security features we allow to help secure your files.
+          </p>
+        </div>
       </div>
 
-      <div class="service">
-        <img src="/images/icon-any-file.svg" alt="" class="service-images"/>
-        <h3 class="service-title">Store any type of file</h3>
-        <p class="service-body">
-          Whether you're sharing holidays photos or work documents, Fylo has you
-          covered allowing for all file types to be securely stored and shared.
-        </p>
+      <div class="service-row">
+        <div class="service">
+          <img
+            src="/images/icon-collaboration.svg"
+            alt=""
+            class="service-images"
+          />
+          <h3 class="service-title">Real-time collaboration</h3>
+          <p class="service-body">
+            Securely share files and folders with friends, family and colleagues
+            for live collaboration. No email attachments required.
+          </p>
+        </div>
+
+        <div class="service">
+          <img src="/images/icon-any-file.svg" alt="" class="service-images" />
+          <h3 class="service-title">Store any type of file</h3>
+          <p class="service-body">
+            Whether you're sharing holidays photos or work documents, Fylo has
+            you covered allowing for all file types to be securely stored and
+            shared.
+          </p>
+        </div>
       </div>
-    </div>
     </section>
-      <!-- End of Services Section-->
+    <!-- End of Services Section-->
 
-      <!-- Start of Info Section-->
-      <section class="container">
-        <div class="information-row">
-        <img src="/images/illustration-stay-productive.png" alt="" class="information-images"/>
-      <div class="information-section">
-        <h2 class="information-title">
-          Stay productive, wherever you are
-        </h2>
-        <p class="information-body">
-          Never let location be an issue when accessing your files. Fylo has you
-          covered for all of your file storage needs.
-        </p>
-        <p class="information-body">
-          Securely share files and folders with friends, family and colleagues
-          for live collaboration. No email attachments required.
-        </p>
-        <a href="#" class="fylo-works">
-          See how Fylo works
-          <img src="/images/icon-arrow.svg" alt="" class="information-arrow" />
-        </a>
+    <!-- Start of Info Section-->
+    <section class="container">
+      <div class="information-row">
+        <img
+          src="/images/illustration-stay-productive.png"
+          alt=""
+          class="information-images"
+        />
+        <div class="information-section">
+          <h2 class="information-title">
+            Stay productive, wherever you are
+          </h2>
+          <p class="information-body">
+            Never let location be an issue when accessing your files. Fylo has
+            you covered for all of your file storage needs.
+          </p>
+          <p class="information-body">
+            Securely share files and folders with friends, family and colleagues
+            for live collaboration. No email attachments required.
+          </p>
+          <a href="#" class="fylo-works">
+            See how Fylo works
+            <img
+              src="/images/icon-arrow.svg"
+              alt=""
+              class="information-arrow"
+            />
+          </a>
+        </div>
       </div>
-      </div>        
-      </section>
-      <!-- End of Info Section-->
+    </section>
+    <!-- End of Info Section-->
 
-      <!-- Start of Testimonial Section-->
-      <section class="container">
-        <div class="testimonial">
-        <img src="/images/bg-quotes.png" alt="" class="testimonial-images"/>
+    <!-- Start of Testimonial Section-->
+    <section class="container">
+      <img src="/images/bg-quotes.png" alt="" class="testimonial-images" />
+      <div class="testimonial">
+        <div>
           <p class="testimonial-body">
             Fylo has improved our team productivity by an order of magnitude.
             Since making the switch our team has become a well-oiled
             collaboration machine.
           </p>
-          <img src="/images/profile-1.jpg" alt="" class="testimonial-images"/>
+          <img src="/images/profile-1.jpg" alt="" class="testimonial-images" />
           <p class="testimonial-name">
             Satish Patel
           </p>
@@ -141,7 +165,7 @@
             Since making the switch our team has become a well-oiled
             collaboration machine.
           </p>
-          <img src="/images/profile-2.jpg" alt="" class="testimonial-images"/>
+          <img src="/images/profile-2.jpg" alt="" class="testimonial-images" />
           <p class="testimonial-person">
             Bruce McKenzie
           </p>
@@ -155,7 +179,7 @@
             Since making the switch our team has become a well-oiled
             collaboration machine.
           </p>
-          <img src="/images/profile-3.jpg" alt="" class="testimonial-images"/>
+          <img src="/images/profile-3.jpg" alt="" class="testimonial-images" />
           <p class="testimonial-name">
             Iva Boyd
           </p>
@@ -164,36 +188,40 @@
           </p>
         </div>
       </div>
-      </section>
-      <!-- End of Testimonial Section-->
+    </section>
+    <!-- End of Testimonial Section-->
 
-      <!-- Start of Subscription Section-->
-      <form class="container">
-        <h2 class="form-title">
-          Get early access today
-        </h2>
-        <p class="form-body">
-          It only takes a minute to sign up and our free starter tier is
-          extremely generous. If you have any questions, our support team would
-          be happy to help you.
-        </p>
-        <div class="form-control">
-          <input type="email" placeholder="email@email.com" />
-          <a href="#">
-            Get Started For Free
-          </a>
-        </div>
-      </form>
+    <!-- Start of Subscription Section-->
+    <form class="container">
+      <h2 class="form-title">
+        Get early access today
+      </h2>
+      <p class="form-body">
+        It only takes a minute to sign up and our free starter tier is extremely
+        generous. If you have any questions, our support team would be happy to
+        help you.
+      </p>
+      <div class="form-control">
+        <input type="email" placeholder="email@email.com" />
+        <a href="#">
+          Get Started For Free
+        </a>
+      </div>
+    </form>
 
-      <!-- End of Subscription Section-->
+    <!-- End of Subscription Section-->
 
-      <!-- Start of Footer Section-->
-      <footer>
-        <div class="container">
+    <!-- Start of Footer Section-->
+    <footer>
+      <div class="container">
         <div class="footer-section">
-          <img src="/images/logo.svg" alt="logo" class="logo"/>
+          <img src="/images/logo.svg" alt="logo" class="logo" />
           <div>
-            <img src="/images/icon-location.svg" alt="location" class="location-image"/>
+            <img
+              src="/images/icon-location.svg"
+              alt="location"
+              class="location-image"
+            />
             <p class="footer-body">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua
@@ -203,14 +231,22 @@
 
         <div class="footer-section">
           <div class="flex">
-            <img src="/images/icon-phone.svg" alt="phone" class="footer-phone-logo" />
+            <img
+              src="/images/icon-phone.svg"
+              alt="phone"
+              class="footer-phone-logo"
+            />
             <p>
               +1-543-123-4567
             </p>
           </div>
 
           <div class="flex">
-            <img src="/images/icon-email.svg" alt="email" class="footer-email-logo"/>
+            <img
+              src="/images/icon-email.svg"
+              alt="email"
+              class="footer-email-logo"
+            />
             <p>
               example@fylo.com
             </p>
@@ -234,22 +270,22 @@
           </ul>
         </div>
       </div>
-      </footer>
+    </footer>
 
-      <div class="footer-section">
-        <ul>
-          <li>
-            <a href="#"><i class="fab fa-facebook"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-          </li>
-          <li>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-          </li>
-        </ul>
-      </div>
-    
+    <div class="footer-section">
+      <ul>
+        <li>
+          <a href="#"><i class="fab fa-facebook"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+        </li>
+        <li>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+        </li>
+      </ul>
+    </div>
+
     <!-- container -->
     <!-- End of Footer Section-->
   </body>
