--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <section class="container">
       <img src="/images/bg-quotes.png" alt="" class="testimonial-images" />
       <div class="testimonial">
-        <div>
+        <div class="testimonial-card">
           <p class="testimonial-body">
             Fylo has improved our team productivity by an order of magnitude.
             Since making the switch our team has become a well-oiled
@@ -159,7 +159,7 @@
             Founder & CEO, Huddle
           </p>
         </div>
-        <div>
+        <div class="testimonial-card">
           <p class="testimonial-body">
             Fylo has improved our team productivity by an order of magnitude.
             Since making the switch our team has become a well-oiled
@@ -173,7 +173,7 @@
             Founder & CEO, Huddle
           </p>
         </div>
-        <div>
+        <div class="testimonial-card">
           <p class="testimonial-body">
             Fylo has improved our team productivity by an order of magnitude.
             Since making the switch our team has become a well-oiled
