Add style testimonial section.

--- a/index.html
+++ b/index.html
@@ -144,20 +144,28 @@
     <!-- Start of Testimonial Section-->
     <section class="container">
       <img src="/images/bg-quotes.png" alt="" class="testimonial-images" />
-      <div class="testimonial">
+      <div class="testimonials">
         <div class="testimonial-card">
           <p class="testimonial-body">
             Fylo has improved our team productivity by an order of magnitude.
             Since making the switch our team has become a well-oiled
             collaboration machine.
           </p>
-          <img src="/images/profile-1.jpg" alt="" class="testimonial-images" />
-          <p class="testimonial-name">
-            Satish Patel
-          </p>
-          <p class="testimonial-position">
-            Founder & CEO, Huddle
-          </p>
+          <div class="testimonial-user">
+            <img
+              src="/images/profile-1.jpg"
+              alt=""
+              class="testimonial-images"
+            />
+            <div class="testimonial-sig-block">
+              <h5 class="testimonial-name">
+                Satish Patel
+              </h5>
+              <h6 class="testimonial-position">
+                Founder & CEO, Huddle
+              </h6>
+            </div>
+          </div>
         </div>
         <div class="testimonial-card">
           <p class="testimonial-body">
@@ -165,13 +173,21 @@
             Since making the switch our team has become a well-oiled
             collaboration machine.
           </p>
-          <img src="/images/profile-2.jpg" alt="" class="testimonial-images" />
-          <p class="testimonial-person">
-            Bruce McKenzie
-          </p>
-          <p class="testimonial-position">
-            Founder & CEO, Huddle
-          </p>
+          <div class="testimonial-user">
+            <img
+              src="/images/profile-2.jpg"
+              alt=""
+              class="testimonial-images"
+            />
+            <div class="testimonial-sig-block">
+              <h5 class="testimonial-name">
+                Bruce McKenzie
+              </h5>
+              <h6 class="testimonial-position">
+                Founder & CEO, Huddle
+              </h6>
+            </div>
+          </div>
         </div>
         <div class="testimonial-card">
           <p class="testimonial-body">
@@ -179,13 +195,21 @@
             Since making the switch our team has become a well-oiled
             collaboration machine.
           </p>
-          <img src="/images/profile-3.jpg" alt="" class="testimonial-images" />
-          <p class="testimonial-name">
-            Iva Boyd
-          </p>
-          <p class="testimonial-position">
-            Founder & CEO, Huddle
-          </p>
+          <div class="testimonial-user">
+            <img
+              src="/images/profile-3.jpg"
+              alt=""
+              class="testimonial-images"
+            />
+            <div class="testimonial-sig-block">
+              <h5 class="testimonial-name">
+                Iva Boyd
+              </h5>
+              <h6 class="testimonial-position">
+                Founder & CEO, Huddle
+              </h6>
+            </div>
+          </div>
         </div>
       </div>
     </section>
