Add sytle to flylo arrow in info section.

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             Securely share files and folders with friends, family and colleagues
             for live collaboration. No email attachments required.
           </p>
-          <a href="#" class="fylo-works">
+          <a href="#" class="fylo-arrow">
             See how Fylo works
             <img
               src="/images/icon-arrow.svg"
