Add sign up  section styles.

--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
 
     <!-- Start of Testimonial Section-->
     <section class="container">
-      <img src="/images/bg-quotes.png" alt="" class="testimonial-images" />
       <div class="testimonials">
+        <img src="/images/bg-quotes.png" alt="icon quotes" class="testimonial-images" />
         <div class="testimonial-card">
           <p class="testimonial-body">
             Fylo has improved our team productivity by an order of magnitude.
@@ -215,8 +215,8 @@
     </section>
     <!-- End of Testimonial Section-->
 
-    <!-- Start of Subscription Section-->
-    <form class="container">
+    <!-- Start of Sign Up Section-->
+    <form class="form-container">
       <h2 class="form-title">
         Get early access today
       </h2>
@@ -233,7 +233,7 @@
       </div>
     </form>
 
-    <!-- End of Subscription Section-->
+    <!-- End of Sign Up Section-->
 
     <!-- Start of Footer Section-->
     <footer>
