Refactore Get Started For Free btn.

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       </p>
       <div class="form-control">
         <input type="email" placeholder="email@email.com" />
-        <a href="#">
+        <a href="#" class="started-btn btn-accent">
           Get Started For Free
         </a>
       </div>
