refactor for mobile design.

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <img
           src="/images/bg-quotes.png"
           alt="icon quotes"
-          class="testimonial-images"
+          class="testimonial-images-quotes"
         />
         <div class="testimonial-card">
           <p class="testimonial-body">
